[package]
name = "optimisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
yahoo-finance = "0.3.0"
yahoo_finance_api = "1.4.0"
time = "0.3.20"
chrono = "0.4.24"
futures = "0.3.27"